Basis for tournament backend
